--- a/config.json
+++ b/config.json
@@ -1,11 +1,5 @@
 {
-<<<<<<< HEAD
-	"customStylesheetURL": null,
+	"customStylesheetURL": "./styles.css",
 	"yearLength": 40,
 	"hideAge": false
-=======
-	"customStylesheetURL": "styles.css",
-	"yearLength": 50,
-	"hideAge": true 
->>>>>>> 5b05731... colors
 }
